[package]
name = "reportme"
version = "0.1.0"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A metrics crate used in build environment. Used to know the actual usage of your crates."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xuxiaocheng0201/reportme/"
documentation = "https://docs.rs/reportme/"

[dependencies]
reqwest = { version = "~0.11", features = ["json"] }

[badges]
maintenance = { status = "actively-developed" }
