[package]
name = "reportme"
version = "0.2.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2021"
description = "A metrics crate used in build environment. Used to know the actual usage of your crates."
readme = "README.md"
license = "MIT"
repository = "https://github.com/xuxiaocheng0201/reportme/"
documentation = "https://docs.rs/reportme/"
keywords = ["metrics", "report"]

[dependencies]
anyhow = "^1"
ureq = { version = "^2", features = ["tls", "json"], default-features = false }

[badges]
maintenance = { status = "passively-maintained" }
